@@ -83,11 +83,13 @@ Included
 - Explicit Docker-style tar route now also requires valid `manifest.json` and `repositories` JSON payload structure, and requires all manifest layer references to resolve to tar entries.
 - Explicit Docker-style tar route now requires at least one repository/tag mapping in `repositories` JSON, preventing non-empty but non-usable repository shells from passing strict routing.
 - Explicit Docker-style tar route now requires all manifest config references to resolve to tar entries, preventing partial config payload shells from passing strict routing.
+- Explicit Docker-style tar route now requires non-ambiguous config/layer reference resolution, preventing duplicate referenced tar paths from passing strict docker tar routing.
 - Explicit Docker-style tar route now requires canonical root marker paths (`manifest.json`, `repositories`), preventing nested lookalike marker paths from satisfying strict Docker tar routing.
 - Explicit Docker/OCI tar strict routes now require unique canonical root marker entries, preventing duplicate marker-entry ambiguity from satisfying strict tar routing.
 - Explicit Docker-style tar route now requires each manifest entry to include config and layer references, preventing mixed complete/incomplete manifest arrays from passing strict routing.
 - Explicit container tar classification now uses tar entry markers only (not filename hints), preventing marker-looking tar filenames from passing strict container routing.
 - Explicit OCI tar strict route now requires manifest digest references to resolve to blob entries, preventing unrelated blob padding from satisfying strict OCI tar evidence.
+- Explicit OCI tar strict route now requires non-ambiguous digest resolution to blob paths, preventing duplicate referenced blob paths from passing strict OCI tar routing.
 - Explicit OCI tar strict route now requires digest references for every manifest entry when manifests are present, preventing partial/digestless OCI tar manifest shells from passing strict routing.
 - Explicit OCI tar strict route now requires canonical root marker paths (`oci-layout`, `index.json`), preventing nested lookalike marker paths from satisfying strict OCI tar routing.
 - Added regression coverage for OCI layout/tar digest-required strict paths (missing digest refs and digest-mismatch scenarios) in adapter and CLI smoke suites.
